--- a/.config/hypr/settings.conf
+++ b/.config/hypr/settings.conf
@@ -10,12 +10,12 @@ misc {
 }
 
 input {
-  kb_layout = hu
-  kb_model = pc104
+  kb_layout = de
+  # kb_model = 
   follow_mouse = 1
-  touchpad {
-    natural_scroll = yes
-  }
+  # touchpad {
+   # natural_scroll = yes
+  # }
   sensitivity = 0
 }
 
