--- a/.config/hypr/startup.conf
+++ b/.config/hypr/startup.conf
@@ -1,4 +1,4 @@
-# exec-once=dbus-update-activation-environment --systemd DISPLAY WAYLAND_DISPLAY HYPRLAND_INSTANCE_SIGNATURE XDG_CURRENT_DESKTOP #&& systemctl --user start hyprland-session.target
+ exec-once=dbus-update-activation-environment --systemd DISPLAY WAYLAND_DISPLAY HYPRLAND_INSTANCE_SIGNATURE XDG_CURRENT_DESKTOP #&& systemctl --user start hyprland-session.target
 
 exec-once = /usr/libexec/polkit-gnome-authentication-agent-1
 exec-once = ags
